fixed: sidebar contents were the wrong width when the window was small

--- a/styles/debug.less
+++ b/styles/debug.less
@@ -230,12 +230,6 @@ atom-text-editor.editor {
 	}
 }
 
-@media (max-width: 1000px) {
-	.debug-sidebar {
-		width: 250px;
-	}
-}
-
 .debug-custom-panel {
 	@min-width: 200px;
 	@item-width: 260px;
